# ImageDePHI-Phase-I

./: .env  .eslintrc.js  .gitignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yaml  index.html  mng  package-lock.json  package.json  tsconfig.json  workspace.code-workspace
backend/: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.rst  default.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
backend/data/: TCGA-08-0518-01Z-00-DX7.37016e3a-813a-4319-a8fa-7dea055ccc68.json
backend/girder_imagedephi/: __init__.py  resource.py  rest.py  types.py  vips.py
backend/src/: __init__.py
backend/tests/: test_lint.py  test_load.py
devops/ImageDePHI/: README.rst  docker-compose.yml  girder.cfg  provision.yaml
frontend/: .eslintrc.js  .gitignore  Dockerfile  default.nix  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  index.css  index.scss  main.ts  map.ts  router.ts  vuex.d.ts
frontend/src/api/: client.ts  index.ts  item.ts  user.ts
frontend/src/components/: AnnotatorMap.vue  AnnotatorRedactionList.vue  AnnotatorRedactionListItem.vue  Carousel.vue  Header.vue  Map.vue  MapImage.vue  PageTitle.vue  Sidebar.vue  Table.vue  Tool.vue
frontend/src/composables/: useAuthentication.ts
frontend/src/composables/useItem/: index.ts  metadata.ts  tileMetadata.ts
frontend/src/composables/useUser/: index.ts  login.ts
frontend/src/store/: index.ts
frontend/src/store/modules/: user.ts
frontend/src/views/: Home.vue  ItemDetail.vue  Login.vue  ModalAnnotate.vue
scripts/: list_metadata.py  models.py  ocr_images.py  redact.py  redact_image.py  setup.md  tiff_utils.py  utils.py
src/: App.vue  api.ts  index.css  main.ts  router.ts  types.ts
src/components/: Annotator.vue  AnnotatorMap.vue  AnnotatorRedactionList.vue  AnnotatorRedactionListItem.vue  HelloWorld.vue  PageHeader.vue  PageTitle.vue  Sidebar.vue
src/views/: ItemDetail.vue  Login.vue
