[metadata]
name = girder-imagedephi
version = 0.0.0
description = A Girder plugin for ImageDePHI
long_description = file: README.md
keywords = girder-plugin, girder-imagedephi
license = Apache Software License 2.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
author = Kitware, Inc.
author_email = kitware@kitware.com
url = https://github.com/DigitalSlideArchive/ImageDePHI

[options]
zip_safe = False
packages = girder_imagedephi
install_requires =
    girder
    girder-large-image
    girder-large-image-annotation
    girder-worker
    pyvips
    tifftools

[options.extras_require]
test =
    black
    flake8
    isort
    mypy
    pep8-naming
    pytest
    pytest-girder
    pytest-sugar

[options.entry_points]
girder.plugin =
    imagedephi = girder_imagedephi:GirderPlugin

[isort]
profile = black

[flake8]
max-line-length = 88
ignore =
    D10,  # Missing docstring in *
    E203, # Black compatibility
    N802, # Function name should be lowercase
    N803, # Argument name should be lowercase
    N806, # Variable in function should be lowercase
    N812, # Lowercase imported as non lowercase
    N815, # mixedCase variable in class scope
    N816, # mixedCase variable in global scope
    W503, # Line break before binary operator

[tool:pytest]
addopts = --quiet
testpaths = tests

[mypy]
ignore_missing_imports = True
